refactor: null and isBlank processing