@@ -6,6 +6,7 @@ import ru.practicum.category.dto.CategoryDto;
 import ru.practicum.category.dto.NewCategoryDto;
 import ru.practicum.category.repo.CategoryRepo;
 import ru.practicum.category.mapper.CategoryMapper;
+import org.apache.commons.lang3.StringUtils;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -32,7 +33,7 @@ public class CategoryServiceAdminApiImpl implements CategoryServiceAdminApi {
                 () -> new EntityNotFoundException(String.format("Category with id=%d was not found", id))
         );
         Optional.ofNullable(categoryDto.getName()).ifPresent(it -> {
-            if (!categoryDto.getName().isBlank()) categoryWrap.setName(categoryDto.getName());
+            if (!StringUtils.isBlank(categoryDto.getName())) categoryWrap.setName(categoryDto.getName());
         });
         return CategoryMapper.toCategoryDto(categoryWrap);
     }
